--- a/assets/style.css
+++ b/assets/style.css
@@ -3,12 +3,12 @@ body {
 }
 main {
     text-align: center;
-    background-color: rgb(93, 93, 239);
+    background-color: rgb(237, 57, 57);
     width: 1100px;
     margin: 0 auto;
 }
 .sobre-mim {
-    background-color:rgb(117, 117, 233) ;
+    background-color:rgb (237 , 57 57 ) ;
     padding: 10px 60px;
     width: 80%;
     margin: 0 auto;
@@ -31,4 +31,11 @@ img{
     height: 100%;
     width: 100%;
     object-fit: cover;
+}
+.btn {
+    width:250px ;
+    height:30px;
+    margin-top: 15px;
+    background-color: white;
+
 }
